<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- general app strings -->

    <string name="app_name">GreMoApp</string>
    <string name="hello">Hello!</string>

    <!-- section headers -->

    <string name="title_section1">Start Activity</string>
    <string name="title_section2">GreMo Points</string>
    <string name="title_section3">History</string>

    <!-- menu handlers -->

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>

    <!-- GreMo Points -->

    <string name="points_current">Current Points</string>
    <string name="points_earned_alltime">Points earned overall</string>
    <string name="points_earned_lastweek">Points earned this week</string>
    <string name="points_button_spend">Spend Points</string>
    <string name="points_button_donate">Donate Points</string>

    <!-- History -->

    <string name="history_date">Date</string>
    <string name="history_action">Action</string>
    <string name="history_points">Points</string>

    <!-- Action Bar -->

    <string name="actionbar_refresh">Points</string>
    <string name="points_earned_alltime_value" />
    <string name="points_current_value" />
    <string name="points_earned_lastweek_value" />
    <string name="switch_net_localization">Use net localization</string>
    <string name="switch_gps_localization">Use GPS localization</string>
    <string name="switch_wifi_localization">Use wifi localization</string>
    <string name="switch_action">Start action</string>
    <string name="typeOfMovement">Type of movement</string>
    <string name="typeOfTracking">Type of tracking</string>
    <string name="StartStopAction">Start/stop action</string>
    <string name="biking">Biking</string>
    <string name="walking">Walking</string>
    <string name="switch_send">Enable Sending</string>
    <string name="sentMessages">Sent messages:</string>
    <string name="unsentMessages">Unsent messages:</string>
    <string name="DBView">Database</string>
    <string name="sentMessagesValue">0</string>
    <string name="unsentMessagesValue">0</string>
    <string name="refreshHistory">Refresh history</string>
    <string name="refreshProfile">Refresh Profile</string>
    <string name="updatingPoints">Updating points ...</string>
    <string name="updatedPoints">Points updated.</string>
    <string name="updatedHistory">History updated.</string>
    <string name="updatingHistory">Updating History ...</string>
    <string name="switch_motion_sensor">Use motion sensor</string>
    <string name="exitMessageTitle">Exit GreMo App</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="exitMessage">Do you really want to exit Gremo App</string>
    <string name="NotificationTitle">GreMo App still tracking</string>
    <string name="sendMailChooser">Please send the following Mail to help improving the
        Application
    </string>
    <string name="helpMessageTitle">Help</string>
    <string name="helpMessage">Do you want to visit the Gremo Homepage
        \"http://www.ma-gremo.de/\" ?
    </string>
    <string name="history_distance">Distance</string>
    <string name="login_registerInfo">If you have no account: Please register on the Gremo homepage:
        \"http://www.ma-gremo.de/\"
    </string>
    <string name="register">Register</string>
    <string name="errorMessage">Unfortunately, this application has stopped. Sorry!</string>
    <string name="errorReport">Report</string>
    <string name="errorCancle">Cancel</string>
    <string name="errorTitle">Sorry!</string>
    <string name="Data">Send Data</string>
    <string name="toggleButton_on">Stop Action</string>
    <string name="toggleButton_off">Start Action</string>
    <string name="switch_bluetooth_sensor">Use Bluetooth Sensor</string>
    <string name="your">Your</string>
    <string name="enableGps">localisation seems to be disabled, do you want to enable it?</string>
    <string name="atLeastOneLocError">You need at least one tracking type to be active.</string>
    <string name="enableBluetoothError">Your Bluetooth seems to be disabled, do you want to enable
        it?
    </string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="category_sensor">Use sensors</string>
    <string name="title_switch_gps">GPS Localisation</string>
    <string name="title_switch_net">Network Localisation</string>
    <string name="title_switch_wifi">WiFi Localisation</string>
    <string name="title_switch_motion">Motion Sensor</string>
    <string name="title_switch_bluetooth">Bluetooth Sensor</string>
    <string name="bluetoothDisabledError">Bluetooth ist ausgeschaltet</string>
    <string name="category_sweepstake">Gewinnspiel</string>
    <string name="join_sweepstake">Am Gewinnspiel teilnehmen</string>


    <string name="sweepstakeMessage">Sie haben 5000 Punkte erreicht, sie können am Gewinnspiel
        teilnehmen
        und tolle Preise gewinnen. Gehe sie dazu auf die Gremo Homepage und tragen sie ihre Adresse
        sein. Die Adressdaten werden unabhängig von ihren annonymen Fahrraddaten gespeichert. Wollen
        sie auf die Gremo Homepage wechseln?
    </string>
    <string name="rememberSweepstakeLater">Später erinnern</string>
    <string name="sweepstakeTitle">Gewinnspiel</string>
    <string name="noSweepstakeMessage">Sie können leider erst ab 5000 Punkten am Gewinnspiel
        teilnehmen.
    </string>
    <string name="ok">ok</string>
    <string name="descriptionText">In den Einstellungen der App können Sie auswählen, welche
        Sensoren genutzt werden sollen.
        Bevor sie Radfahren oder Zu Fuß gehen, können sie mit \"Starte Aktion\" eine Aktion direkt
        starten. Mit \"Stoppe Aktion\" kann die laufende Aktion am Ziel wieder beendet werde.
        Mit Hilfe des \"Daten Senden\" Schalters, können Sie selbst bestimmen, ob Sie ihre Daten
        live senden wollen, oder erst zu Hause im WLAN.
        Die Anzahl der ungesendeten Nachrichten gibt an, wieviele Datensätze zur Zeit noch auf dem
        Handy gespeichert sind und nicht versendet wurden.
        Um die App zu beenden drücken Sie bitte den \"Zurück\"-Knopf Ihres Handys und bestätigen Sie
        das Beenden der App.
    </string>
    <string name="button_delete_data">Daten löschen</string>
    <string name="delete_data_mesage">Wollen Sie wirklich alle gesammelten, noch nicht gesendeten
        Daten löschen? Dieser Vorgang kann nicht rückgängig gemacht werden!
    </string>
    <string name="descriptionTextLable">Anleitung:</string>
    <string name="sensorTextLable">Erklärung der Sensoren:</string>
    <string name="sensorText">bla</string>
    <string name="sensorLocationLable">GPS &#38; Netzwerk:</string>
    <string name="sensorWiFiLable">WLAN</string>
    <string name="sensorBluetoothLable">Bluetooth:</string>
    <string name="sensorMotionLable">Bewegungssensor:</string>
    <string name="sensorLocationText">Wird zur Positionsbestimmung benötigt um einen Track
        aufzeichnen zu können.
    </string>
    <string name="sensorWiFiText">Wird benötigt um die Position zu bestimmen und zukünfige
        Positionsbestimmung zu optimieren.
    </string>
    <string name="sensorBluetoothText">Wird benötigt um festzusellen wie viele andere
        Verkehrsteilnehmer in der Nähe sind.
    </string>
    <string name="sensorMotionText">Wir benötigt um die Qualität der Straßen bzw. Radwegen zu
        erfassen.
    </string>


</resources>