<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">

    <PreferenceCategory android:title="@string/category_sensor">

        <SwitchPreference
                android:key="gps_switch"
                android:layout="?android:attr/preferenceLayoutChild"
                android:title="@string/title_switch_gps"
                android:defaultValue="true"/>

        <SwitchPreference
                android:key="net_switch"
                android:layout="?android:attr/preferenceLayoutChild"
                android:title="@string/title_switch_net"
                android:defaultValue="true"/>

        <SwitchPreference
                android:key="wifi_switch"
                android:layout="?android:attr/preferenceLayoutChild"
                android:title="@string/title_switch_wifi"
                android:defaultValue="true"/>

        <SwitchPreference
                android:key="motion_switch"
                android:layout="?android:attr/preferenceLayoutChild"
                android:title="@string/title_switch_motion"
                android:defaultValue="true"/>

        <SwitchPreference
                android:key="bluetooth_switch"
                android:layout="?android:attr/preferenceLayoutChild"
                android:title="@string/title_switch_bluetooth"
                android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_sweepstake">

        <Preference
                android:title="@string/category_sweepstake"
                android:key="sweepstake_button"
                android:summary="@string/join_sweepstake"/>
    </PreferenceCategory>
</PreferenceScreen>