<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:text="@string/typeOfMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioTypeOfMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walking"
                android:id="@+id/radioWalking"
                android:layout_marginLeft="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biking"
                android:checked="true"
                android:id="@+id/radioBiking"
                android:layout_marginLeft="20dp" />
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/Data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />


        <Switch
            android:id="@+id/switchSending"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_send"
            android:layout_marginLeft="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unsentMessages" />

            <TextView
                android:id="@+id/unsentMessagesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">

            <Button
                android:id="@+id/buttonDeleteData"
                android:text="@string/button_delete_data"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:layout_centerInParent="true" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="10dp">

            <ToggleButton
                android:id="@+id/buttonAction"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textOn="@string/toggleButton_on"
                android:textOff="@string/toggleButton_off"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:singleLine="false"
                android:layout_centerInParent="true" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16dp"
            android:text="@string/descriptionTextLable"
            android:id="@+id/descriptionTextLable"
            android:layout_gravity="left|center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionText"
            android:id="@+id/descriptionText" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16dp"
            android:text="@string/sensorTextLable"
            android:id="@+id/sensorTextLable"
            android:layout_gravity="left|center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/sensorLocationLable"
            android:id="@+id/sensorLocationLable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensorLocationText"
            android:id="@+id/sensorLocationText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/sensorWiFiLable"
            android:id="@+id/sensorWiFiLable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensorWiFiText"
            android:id="@+id/sensorWiFiText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/sensorBluetoothLable"
            android:id="@+id/sensorBluetoothLable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensorBluetoothText"
            android:id="@+id/sensorBluetoothText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/sensorMotionLable"
            android:id="@+id/sensorMotionLable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensorMotionText"
            android:id="@+id/sensorMotionText" />


        <!--<View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider"/>

        <TextView
                android:text="@string/DBView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ListView
                    android:id="@+id/listViewDB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:transcriptMode="normal">
            </ListView>
        </LinearLayout>-->
    </LinearLayout>
</ScrollView>