<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/fragment_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity$HistoryFragment">


    <LinearLayout
            android:id="@+id/history_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <Button
                android:id="@+id/buttonRefreshHistory"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/refreshHistory"/>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider"/>

        <LinearLayout
                android:id="@+id/history_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/history_date_header"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.3"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:height="@dimen/listview_horizontal_margin"
                    android:text="@string/history_date"
                    android:textSize="15sp"/>

            <TextView
                    android:id="@+id/history_action_header"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.2"
                    android:height="@dimen/listview_horizontal_margin"
                    android:text="@string/history_action"
                    android:textSize="15sp"/>

            <TextView
                    android:id="@+id/history_distance_header"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.3"
                    android:text="@string/history_distance"
                    android:textSize="15sp"/>

            <TextView
                    android:id="@+id/history_points_header"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.2"
                    android:height="@dimen/listview_horizontal_margin"
                    android:text="@string/history_points"
                    android:textSize="15sp"/>
        </LinearLayout>

        <!-- List Divider -->

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider"/>

        <!-- ListView (grid_items) -->

        <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ListView
                    android:id="@+id/listViewHistory"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
            </ListView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>